Update lists at 20240727-1200

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -295,6 +295,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -647,6 +648,7 @@ deny 194.15.113.118;
 deny 194.15.115.212;
 deny 194.163.157.49;
 deny 194.164.122.21;
+deny 194.26.192.161;
 deny 194.26.192.77;
 deny 194.62.248.21;
 deny 195.160.220.104;
@@ -838,6 +840,7 @@ deny 205.185.124.193;
 deny 205.185.127.231;
 deny 209.127.245.250;
 deny 209.127.245.251;
+deny 209.127.245.252;
 deny 209.135.168.10;
 deny 209.135.168.56;
 deny 209.141.32.181;
@@ -958,6 +961,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -984,6 +988,7 @@ deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:32:5054:ff:fe6c:39dc;
 deny 2602:2da:0:32:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1325,6 +1330,7 @@ deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:2000:2012:f3c1:8a5e:dead:beef;
 deny 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+deny 2a0a:c801:1:5::5d;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
@@ -1543,6 +1549,7 @@ deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c051::2;
 deny 2a12:5940:c826::2;
 deny 2a12:5940:f0a8::2;
+deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:2:1:185:241:208:81;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 2a12:bec4:11d3:de9f::1;
@@ -1551,8 +1558,8 @@ deny 31.129.22.65;
 deny 31.13.195.60;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 34.197.205.251;
 deny 35.0.127.52;
-deny 35.173.108.143;
 deny 37.114.41.119;
 deny 37.1.201.144;
 deny 37.120.190.85;
@@ -1660,6 +1667,7 @@ deny 51.222.84.46;
 deny 51.38.113.118;
 deny 51.38.225.46;
 deny 51.38.81.135;
+deny 5.181.156.36;
 deny 51.81.222.62;
 deny 51.81.254.14;
 deny 51.81.254.15;
