--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -295,6 +295,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -647,6 +648,7 @@ allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.164.122.21;
+allow 194.26.192.161;
 allow 194.26.192.77;
 allow 194.62.248.21;
 allow 195.160.220.104;
@@ -838,6 +840,7 @@ allow 205.185.124.193;
 allow 205.185.127.231;
 allow 209.127.245.250;
 allow 209.127.245.251;
+allow 209.127.245.252;
 allow 209.135.168.10;
 allow 209.135.168.56;
 allow 209.141.32.181;
@@ -958,6 +961,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -984,6 +988,7 @@ allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:32:5054:ff:fe6c:39dc;
 allow 2602:2da:0:32:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1325,6 +1330,7 @@ allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:2000:2012:f3c1:8a5e:dead:beef;
 allow 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+allow 2a0a:c801:1:5::5d;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
@@ -1543,6 +1549,7 @@ allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
+allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 2a12:bec4:11d3:de9f::1;
@@ -1551,8 +1558,8 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.197.205.251;
 allow 35.0.127.52;
-allow 35.173.108.143;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1660,6 +1667,7 @@ allow 51.222.84.46;
 allow 51.38.113.118;
 allow 51.38.225.46;
 allow 51.38.81.135;
+allow 5.181.156.36;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
