--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -224,7 +224,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 178.31.4.122;
+set_real_ip_from 178.30.119.62;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -296,6 +296,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -638,7 +639,6 @@ set_real_ip_from 193.218.118.178;
 set_real_ip_from 193.218.118.182;
 set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
-set_real_ip_from 193.233.133.109;
 set_real_ip_from 193.239.232.230;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
@@ -807,7 +807,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
-set_real_ip_from 2001:b011:4002:3753::b;
+set_real_ip_from 2001:b011:4002:3d6a::b;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bf0:666::666;
@@ -1557,6 +1557,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.224.201.18;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1578,7 +1579,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 43.157.40.39;
-set_real_ip_from 44.210.9.183;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1744,6 +1744,7 @@ set_real_ip_from 72.211.49.235;
 set_real_ip_from 74.48.108.229;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.146.42;
+set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.221.152.105;
 set_real_ip_from 77.221.157.237;
 set_real_ip_from 77.221.159.184;
