--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -114,6 +114,7 @@ allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
+allow 125.253.41.169;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
@@ -246,7 +247,6 @@ allow 181.41.143.246;
 allow 181.41.143.247;
 allow 181.41.143.250;
 allow 181.41.143.252;
-allow 18.208.76.43;
 allow 184.105.48.40;
 allow 184.75.223.203;
 allow 185.100.85.132;
@@ -297,7 +297,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -544,6 +543,7 @@ allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
 allow 185.84.31.254;
+allow 185.91.116.202;
 allow 188.165.200.97;
 allow 188.172.228.41;
 allow 188.172.229.15;
@@ -963,6 +963,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -988,6 +989,7 @@ allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:32:5054:ff:fe6c:39dc;
 allow 2602:2da:0:32:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1179,7 +1181,6 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:19a0:3:d0:0:252e:d06d:1;
 allow 2a00:19a0:3:d3:0:252e:d315:1;
 allow 2a00:19a0:3:d3:0:252e:d317:1;
@@ -1556,6 +1557,7 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.197.121.79;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1798,7 +1800,6 @@ allow 87.118.116.103;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
-allow 87.120.254.132;
 allow 87.120.254.192;
 allow 88.209.197.213;
 allow 88.80.20.86;
