Update lists at 20240728-1500

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -114,7 +114,6 @@ set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
-set_real_ip_from 125.253.41.169;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.15.186;
@@ -297,6 +296,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -531,6 +531,7 @@ set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.246.86.197;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
+set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
@@ -967,6 +968,7 @@ set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
 set_real_ip_from 23.94.211.25;
+set_real_ip_from 2400:6180:100:d0::2c:3001;
 set_real_ip_from 2400:8901::f03c:93ff:fe68:23b3;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:d320:2202:5765::1;
@@ -1207,7 +1209,9 @@ set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:25b0:aaaa:5258::;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:29b8:dc01:1801::3;
+set_real_ip_from 2a02:29b8:dc01:1801::4;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
+set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
@@ -1215,6 +1219,7 @@ set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
+set_real_ip_from 2a03:3b40:fe:3b1::1;
 set_real_ip_from 2a03:4000:15:928:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 set_real_ip_from 2a03:4000:19:40:4804:2fff:fe4c:9cc1;
@@ -1300,6 +1305,10 @@ set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:141:2c::1;
 set_real_ip_from 2a05:541:150:6::1;
+set_real_ip_from 2a05:b0c7:6388::1;
+set_real_ip_from 2a05:b0c7:67c6::1;
+set_real_ip_from 2a05:b0c7:6949::1;
+set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
@@ -1557,7 +1566,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.197.121.79;
+set_real_ip_from 3.216.120.84;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1565,6 +1574,7 @@ set_real_ip_from 37.120.190.85;
 set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.187.74.97;
+set_real_ip_from 37.205.8.220;
 set_real_ip_from 37.220.86.167;
 set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.5;
@@ -1726,6 +1736,7 @@ set_real_ip_from 62.182.83.179;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.226.89.91;
 set_real_ip_from 64.227.115.78;
+set_real_ip_from 64.227.159.148;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.206.27.13;
 set_real_ip_from 66.206.27.51;
@@ -1759,6 +1770,12 @@ set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 77.83.246.112;
+set_real_ip_from 77.90.41.191;
+set_real_ip_from 77.90.41.199;
+set_real_ip_from 77.90.42.201;
+set_real_ip_from 77.90.42.213;
+set_real_ip_from 77.90.42.235;
+set_real_ip_from 77.90.42.236;
 set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
@@ -1773,6 +1790,7 @@ set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.20.58;
+set_real_ip_from 81.17.20.59;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.36;
 set_real_ip_from 82.153.138.119;
