--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -114,7 +114,6 @@ allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
-allow 125.253.41.169;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
@@ -297,6 +296,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -531,6 +531,7 @@ allow 185.246.189.99;
 allow 185.246.86.197;
 allow 185.247.184.105;
 allow 185.247.184.33;
+allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
@@ -967,6 +968,7 @@ allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
+allow 2400:6180:100:d0::2c:3001;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:d320:2202:5765::1;
@@ -1207,7 +1209,9 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:25b0:aaaa:5258::;
 allow 2a02:2970:1001::4b;
 allow 2a02:29b8:dc01:1801::3;
+allow 2a02:29b8:dc01:1801::4;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
+allow 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
@@ -1215,6 +1219,7 @@ allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
+allow 2a03:3b40:fe:3b1::1;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 allow 2a03:4000:19:40:4804:2fff:fe4c:9cc1;
@@ -1300,6 +1305,10 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
+allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1557,7 +1566,7 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.197.121.79;
+allow 3.216.120.84;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1565,6 +1574,7 @@ allow 37.120.190.85;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.187.74.97;
+allow 37.205.8.220;
 allow 37.220.86.167;
 allow 37.228.129.128;
 allow 37.228.129.5;
@@ -1726,6 +1736,7 @@ allow 62.182.83.179;
 allow 62.182.84.146;
 allow 64.226.89.91;
 allow 64.227.115.78;
+allow 64.227.159.148;
 allow 66.146.193.33;
 allow 66.206.27.13;
 allow 66.206.27.51;
@@ -1759,6 +1770,12 @@ allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 77.83.246.112;
+allow 77.90.41.191;
+allow 77.90.41.199;
+allow 77.90.42.201;
+allow 77.90.42.213;
+allow 77.90.42.235;
+allow 77.90.42.236;
 allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
@@ -1773,6 +1790,7 @@ allow 80.82.78.14;
 allow 80.94.92.106;
 allow 81.16.33.42;
 allow 81.17.20.58;
+allow 81.17.20.59;
 allow 81.17.28.95;
 allow 82.118.242.36;
 allow 82.153.138.119;
