--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -116,6 +116,7 @@ deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+deny 2400:6180:100:d0::2c:3001;
 deny 2400:8901::f03c:93ff:fe68:23b3;
 deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:d320:2202:5765::1;
@@ -349,7 +350,9 @@ deny 2a02:16d0:0:5::1;
 deny 2a02:25b0:aaaa:5258::;
 deny 2a02:2970:1001::4b;
 deny 2a02:29b8:dc01:1801::3;
+deny 2a02:29b8:dc01:1801::4;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
+deny 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:898:218::1;
@@ -357,6 +360,7 @@ deny 2a02:898:218::2;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
+deny 2a03:3b40:fe:3b1::1;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
 deny 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 deny 2a03:4000:19:40:4804:2fff:fe4c:9cc1;
@@ -442,6 +446,10 @@ deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:141:2c::1;
 deny 2a05:541:150:6::1;
+deny 2a05:b0c7:6388::1;
+deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6949::1;
+deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
