Update lists at 20240729-0900

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -123,6 +123,7 @@ deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.162.249.209;
 deny 139.99.172.11;
+deny 139.99.184.245;
 deny 139.99.8.57;
 deny 141.239.146.142;
 deny 141.95.59.92;
@@ -201,6 +202,7 @@ deny 172.81.133.34;
 deny 173.249.57.253;
 deny 176.114.248.225;
 deny 176.118.193.33;
+deny 176.121.81.51;
 deny 176.126.253.190;
 deny 176.58.100.98;
 deny 176.58.121.177;
@@ -649,6 +651,7 @@ deny 194.163.157.49;
 deny 194.164.122.21;
 deny 194.26.192.161;
 deny 194.26.192.77;
+deny 194.62.248.21;
 deny 195.160.220.104;
 deny 195.16.73.134;
 deny 195.176.3.19;
@@ -813,7 +816,6 @@ deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 201.23.12.101;
 deny 201.23.14.225;
 deny 201.23.16.249;
-deny 201.71.244.134;
 deny 202.182.99.129;
 deny 202.61.226.98;
 deny 202.94.246.210;
@@ -960,7 +962,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -988,7 +989,6 @@ deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:32:5054:ff:fe6c:39dc;
 deny 2602:2da:0:32:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1503,6 +1503,9 @@ deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0e:97c0:3ea:372::1;
+deny 2a0e:97c0:3ea:bc::1;
+deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
@@ -1559,8 +1562,8 @@ deny 31.129.22.65;
 deny 31.13.195.60;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 34.206.127.164;
 deny 35.0.127.52;
+deny 37.114.41.119;
 deny 37.1.201.144;
 deny 37.120.190.85;
 deny 37.120.239.59;
@@ -1862,6 +1865,7 @@ deny 93.123.12.112;
 deny 93.123.12.164;
 deny 93.123.12.240;
 deny 93.157.106.177;
+deny 93.90.74.31;
 deny 93.95.225.141;
 deny 93.95.228.125;
 deny 93.95.228.205;
@@ -1900,3 +1904,4 @@ deny 95.211.244.28;
 deny 96.126.98.146;
 deny 96.27.198.133;
 deny 98.128.173.33;
+deny 98.80.48.248;
