--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -158,6 +158,7 @@ allow 152.53.53.154;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.30.210.35;
+allow 154.30.210.36;
 allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
@@ -974,6 +975,7 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2402:1f00:8201:61::2d91:af20;
+allow 2402:1f00:8201:61::da05:d4c6;
 allow 24.144.108.118;
 allow 24.240.72.170;
 allow 2.58.56.220;
@@ -1207,9 +1209,9 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:25b0:aaaa:5258::;
 allow 2a02:2970:1001::4b;
 allow 2a02:29b8:dc01:1801::3;
-allow 2a02:29b8:dc01:1801::4;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
+allow 2a02:29b8:dc01:1801:42:51ff:fe11:143c;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
@@ -1287,7 +1289,6 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
-allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
@@ -1563,7 +1564,6 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.196.30.82;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1708,7 +1708,6 @@ allow 5.255.98.198;
 allow 5.255.98.23;
 allow 5.255.99.108;
 allow 5.255.99.124;
-allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
@@ -1726,6 +1725,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.80.11.29;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1789,6 +1789,7 @@ allow 80.94.92.106;
 allow 81.16.33.42;
 allow 81.17.20.58;
 allow 81.17.20.59;
+allow 81.17.20.60;
 allow 81.17.28.95;
 allow 82.118.242.36;
 allow 82.153.138.119;
