--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -158,6 +158,7 @@ set_real_ip_from 152.53.53.154;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.30.210.35;
+set_real_ip_from 154.30.210.36;
 set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
@@ -974,6 +975,7 @@ set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2402:1f00:8201:61::2d91:af20;
+set_real_ip_from 2402:1f00:8201:61::da05:d4c6;
 set_real_ip_from 24.144.108.118;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.58.56.220;
@@ -1207,9 +1209,9 @@ set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:25b0:aaaa:5258::;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:29b8:dc01:1801::3;
-set_real_ip_from 2a02:29b8:dc01:1801::4;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
+set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143c;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
@@ -1287,7 +1289,6 @@ set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
-set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:104:fe02::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
@@ -1563,7 +1564,6 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.196.30.82;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1708,7 +1708,6 @@ set_real_ip_from 5.255.98.198;
 set_real_ip_from 5.255.98.23;
 set_real_ip_from 5.255.99.108;
 set_real_ip_from 5.255.99.124;
-set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
@@ -1726,6 +1725,7 @@ set_real_ip_from 54.36.209.254;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
+set_real_ip_from 54.80.11.29;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
@@ -1789,6 +1789,7 @@ set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.20.58;
 set_real_ip_from 81.17.20.59;
+set_real_ip_from 81.17.20.60;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.36;
 set_real_ip_from 82.153.138.119;
