Update lists at 20240729-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -176,7 +176,6 @@ allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
 allow 162.247.74.74;
-allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
@@ -199,7 +198,6 @@ allow 172.232.164.52;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
-allow 172.81.133.34;
 allow 173.249.57.253;
 allow 176.114.248.225;
 allow 176.118.193.33;
@@ -219,6 +217,7 @@ allow 178.17.174.164;
 allow 178.175.131.141;
 allow 178.175.142.26;
 allow 178.175.148.105;
+allow 178.175.148.107;
 allow 178.175.148.209;
 allow 178.20.55.16;
 allow 178.20.55.182;
@@ -298,6 +297,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -863,6 +863,7 @@ allow 212.95.50.77;
 allow 212.95.52.76;
 allow 213.252.140.118;
 allow 213.95.149.22;
+allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 217.197.107.138;
@@ -1013,7 +1014,6 @@ allow 2604:a880:400:d0::1b1c:1;
 allow 2604:a880:400:d0::20fd:1001;
 allow 2604:a880:400:d0::21e4:a001;
 allow 2604:a880:400:d0::238b:e001;
-allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
@@ -1183,6 +1183,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:19a0:3:d0:0:252e:d06d:1;
 allow 2a00:19a0:3:d3:0:252e:d315:1;
 allow 2a00:19a0:3:d3:0:252e:d317:1;
@@ -1196,6 +1197,7 @@ allow 2a00:1dc0:caff:142::ad49;
 allow 2a00:1dc0:caff:143::9a47;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
+allow 2a00:1dc0:caff:83::2c47;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
@@ -1684,6 +1686,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.0.187.223;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.103.190;
@@ -1725,7 +1728,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.80.11.29;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1816,6 +1818,7 @@ allow 87.118.116.103;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 87.120.254.192;
 allow 88.209.197.213;
 allow 88.80.20.86;
