--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -156,7 +156,6 @@ allow 2604:a880:400:d0::1b1c:1;
 allow 2604:a880:400:d0::20fd:1001;
 allow 2604:a880:400:d0::21e4:a001;
 allow 2604:a880:400:d0::238b:e001;
-allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
@@ -325,6 +324,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:19a0:3:d0:0:252e:d06d:1;
 allow 2a00:19a0:3:d3:0:252e:d315:1;
 allow 2a00:19a0:3:d3:0:252e:d317:1;
@@ -338,6 +338,7 @@ allow 2a00:1dc0:caff:142::ad49;
 allow 2a00:1dc0:caff:143::9a47;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
+allow 2a00:1dc0:caff:83::2c47;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
