--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -156,6 +156,7 @@ set_real_ip_from 2604:a880:400:d0::1b1c:1;
 set_real_ip_from 2604:a880:400:d0::20fd:1001;
 set_real_ip_from 2604:a880:400:d0::21e4:a001;
 set_real_ip_from 2604:a880:400:d0::238b:e001;
+set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
