Update lists at 20240730-0000

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -356,6 +356,7 @@ allow 2a02:29b8:dc01:1801::3;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143c;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:b33b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
