--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -356,6 +356,7 @@ set_real_ip_from 2a02:29b8:dc01:1801::3;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143c;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:b33b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
