--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -239,6 +239,7 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.167.205;
 allow 179.43.179.58;
+allow 179.43.179.59;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
@@ -617,6 +618,7 @@ allow 192.99.149.111;
 allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.142.147.69;
 allow 193.168.141.173;
 allow 193.168.143.161;
 allow 193.188.21.212;
@@ -1216,6 +1218,7 @@ allow 2a02:29b8:dc01:1801::3;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143c;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:b33b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
@@ -1689,7 +1692,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1718,7 +1720,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.166.42.138;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1912,3 +1913,4 @@ allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.27.198.133;
 allow 98.128.173.33;
+allow 98.80.40.198;
