Update lists at 20240730-0600

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -146,13 +146,11 @@ allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
-allow 2602:fccf:310:1::b;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:a880:400:d0::1744:4001;
-allow 2604:a880:400:d0::1b1c:1;
 allow 2604:a880:400:d0::20fd:1001;
 allow 2604:a880:400:d0::238b:e001;
 allow 2604:b480:3:6::2;
@@ -255,6 +253,7 @@ allow 2605:6400:d814:2775::;
 allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
 allow 2605:aa80:0:9::3;
+allow 2605:aa80:3:6c14::1;
 allow 2607:5300:201:3100::535e;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::163a;
@@ -674,13 +673,6 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
-allow 2a0f:e586:f:f::133;
-allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
-allow 2a0f:e586:f:f:8398:111f:f05a:ac07;
-allow 2a0f:e586:f:f:a052:2166:bef9:a432;
-allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
-allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:1fc0:10::debc:26b9;
 allow 2a10:1fc0:1::e016:2586;
 allow 2a10:1fc0:8::a061:729b;
