--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -146,13 +146,11 @@ set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:eb06::1;
 set_real_ip_from 2602:fccf:310:1::a;
-set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:a880:400:d0::1744:4001;
-set_real_ip_from 2604:a880:400:d0::1b1c:1;
 set_real_ip_from 2604:a880:400:d0::20fd:1001;
 set_real_ip_from 2604:a880:400:d0::238b:e001;
 set_real_ip_from 2604:b480:3:6::2;
@@ -255,6 +253,7 @@ set_real_ip_from 2605:6400:d814:2775::;
 set_real_ip_from 2605:6400:d814:4181::1;
 set_real_ip_from 2605:a140:2186:5418::1;
 set_real_ip_from 2605:aa80:0:9::3;
+set_real_ip_from 2605:aa80:3:6c14::1;
 set_real_ip_from 2607:5300:201:3100::535e;
 set_real_ip_from 2607:5300:203:b45b::;
 set_real_ip_from 2607:5300:205:200::163a;
@@ -674,13 +673,6 @@ set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
-set_real_ip_from 2a0f:e586:f:f::133;
-set_real_ip_from 2a0f:e586:f:f::182;
-set_real_ip_from 2a0f:e586:f:f::188;
-set_real_ip_from 2a0f:e586:f:f:8398:111f:f05a:ac07;
-set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
-set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
-set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:1fc0:10::debc:26b9;
 set_real_ip_from 2a10:1fc0:1::e016:2586;
 set_real_ip_from 2a10:1fc0:8::a061:729b;
