--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -298,10 +299,10 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
+set_real_ip_from 185.181.60.135;
 set_real_ip_from 185.181.61.115;
 set_real_ip_from 185.181.61.142;
 set_real_ip_from 185.183.157.214;
@@ -454,9 +455,36 @@ set_real_ip_from 185.220.101.60;
 set_real_ip_from 185.220.101.61;
 set_real_ip_from 185.220.101.62;
 set_real_ip_from 185.220.101.63;
+set_real_ip_from 185.220.101.64;
+set_real_ip_from 185.220.101.65;
+set_real_ip_from 185.220.101.66;
+set_real_ip_from 185.220.101.67;
+set_real_ip_from 185.220.101.68;
+set_real_ip_from 185.220.101.69;
 set_real_ip_from 185.220.101.7;
+set_real_ip_from 185.220.101.70;
+set_real_ip_from 185.220.101.71;
+set_real_ip_from 185.220.101.72;
+set_real_ip_from 185.220.101.73;
+set_real_ip_from 185.220.101.74;
+set_real_ip_from 185.220.101.75;
+set_real_ip_from 185.220.101.76;
+set_real_ip_from 185.220.101.77;
+set_real_ip_from 185.220.101.78;
+set_real_ip_from 185.220.101.79;
 set_real_ip_from 185.220.101.8;
+set_real_ip_from 185.220.101.80;
+set_real_ip_from 185.220.101.81;
+set_real_ip_from 185.220.101.82;
+set_real_ip_from 185.220.101.83;
+set_real_ip_from 185.220.101.84;
+set_real_ip_from 185.220.101.85;
+set_real_ip_from 185.220.101.86;
+set_real_ip_from 185.220.101.87;
+set_real_ip_from 185.220.101.88;
+set_real_ip_from 185.220.101.89;
 set_real_ip_from 185.220.101.9;
+set_real_ip_from 185.220.101.90;
 set_real_ip_from 185.220.101.96;
 set_real_ip_from 185.220.101.97;
 set_real_ip_from 185.220.101.98;
@@ -607,6 +635,12 @@ set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.200.17.85;
+set_real_ip_from 193.218.118.133;
+set_real_ip_from 193.218.118.173;
+set_real_ip_from 193.218.118.178;
+set_real_ip_from 193.218.118.182;
+set_real_ip_from 193.218.118.188;
+set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.239.232.230;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
@@ -930,6 +964,7 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
 set_real_ip_from 23.94.211.25;
@@ -958,6 +993,7 @@ set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
 set_real_ip_from 2602:2da:0:32:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:32:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::5;
@@ -1259,7 +1295,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:104:fe02::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:108:4b9e::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
@@ -1420,6 +1455,33 @@ set_real_ip_from 2a0b:f4c2::29;
 set_real_ip_from 2a0b:f4c2::3;
 set_real_ip_from 2a0b:f4c2::30;
 set_real_ip_from 2a0b:f4c2::31;
+set_real_ip_from 2a0b:f4c2:3::64;
+set_real_ip_from 2a0b:f4c2:3::65;
+set_real_ip_from 2a0b:f4c2:3::66;
+set_real_ip_from 2a0b:f4c2:3::67;
+set_real_ip_from 2a0b:f4c2:3::68;
+set_real_ip_from 2a0b:f4c2:3::69;
+set_real_ip_from 2a0b:f4c2:3::70;
+set_real_ip_from 2a0b:f4c2:3::71;
+set_real_ip_from 2a0b:f4c2:3::72;
+set_real_ip_from 2a0b:f4c2:3::73;
+set_real_ip_from 2a0b:f4c2:3::74;
+set_real_ip_from 2a0b:f4c2:3::75;
+set_real_ip_from 2a0b:f4c2:3::76;
+set_real_ip_from 2a0b:f4c2:3::77;
+set_real_ip_from 2a0b:f4c2:3::78;
+set_real_ip_from 2a0b:f4c2:3::79;
+set_real_ip_from 2a0b:f4c2:3::80;
+set_real_ip_from 2a0b:f4c2:3::81;
+set_real_ip_from 2a0b:f4c2:3::82;
+set_real_ip_from 2a0b:f4c2:3::83;
+set_real_ip_from 2a0b:f4c2:3::84;
+set_real_ip_from 2a0b:f4c2:3::85;
+set_real_ip_from 2a0b:f4c2:3::86;
+set_real_ip_from 2a0b:f4c2:3::87;
+set_real_ip_from 2a0b:f4c2:3::88;
+set_real_ip_from 2a0b:f4c2:3::89;
+set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
 set_real_ip_from 2a0b:f4c2:4::101;
@@ -1448,8 +1510,6 @@ set_real_ip_from 2a0e:97c0:3ea:372::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
-set_real_ip_from 2a0e:d602:1:14bc::2;
-set_real_ip_from 2a0e:d602:2:2a2::2;
 set_real_ip_from 2a0e:d602:2:55f::2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
@@ -1469,6 +1529,12 @@ set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
+set_real_ip_from 2a0f:e586:f:f::133;
+set_real_ip_from 2a0f:e586:f:f::182;
+set_real_ip_from 2a0f:e586:f:f::188;
+set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
+set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
+set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:1fc0:10::debc:26b9;
 set_real_ip_from 2a10:1fc0:1::e016:2586;
 set_real_ip_from 2a10:1fc0:8::a061:729b;
@@ -1496,6 +1562,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.237.195.87;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1618,7 +1685,6 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
-set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1646,7 +1712,6 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.197.77.33;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1683,7 +1748,6 @@ set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 74.48.108.229;
 set_real_ip_from 74.82.47.194;
-set_real_ip_from 77.105.146.42;
 set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.221.152.105;
 set_real_ip_from 77.221.157.237;
@@ -1699,13 +1763,13 @@ set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 77.83.246.112;
+set_real_ip_from 77.90.41.191;
 set_real_ip_from 77.90.41.199;
 set_real_ip_from 77.90.42.201;
 set_real_ip_from 77.90.42.213;
 set_real_ip_from 77.90.42.235;
 set_real_ip_from 77.90.42.236;
 set_real_ip_from 77.91.85.147;
-set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.124.8.241;
