--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -134,6 +134,7 @@ set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
 set_real_ip_from 2602:2da:0:32:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:32:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::5;
@@ -434,7 +435,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:104:fe02::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:108:4b9e::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
@@ -595,6 +595,33 @@ set_real_ip_from 2a0b:f4c2::29;
 set_real_ip_from 2a0b:f4c2::3;
 set_real_ip_from 2a0b:f4c2::30;
 set_real_ip_from 2a0b:f4c2::31;
+set_real_ip_from 2a0b:f4c2:3::64;
+set_real_ip_from 2a0b:f4c2:3::65;
+set_real_ip_from 2a0b:f4c2:3::66;
+set_real_ip_from 2a0b:f4c2:3::67;
+set_real_ip_from 2a0b:f4c2:3::68;
+set_real_ip_from 2a0b:f4c2:3::69;
+set_real_ip_from 2a0b:f4c2:3::70;
+set_real_ip_from 2a0b:f4c2:3::71;
+set_real_ip_from 2a0b:f4c2:3::72;
+set_real_ip_from 2a0b:f4c2:3::73;
+set_real_ip_from 2a0b:f4c2:3::74;
+set_real_ip_from 2a0b:f4c2:3::75;
+set_real_ip_from 2a0b:f4c2:3::76;
+set_real_ip_from 2a0b:f4c2:3::77;
+set_real_ip_from 2a0b:f4c2:3::78;
+set_real_ip_from 2a0b:f4c2:3::79;
+set_real_ip_from 2a0b:f4c2:3::80;
+set_real_ip_from 2a0b:f4c2:3::81;
+set_real_ip_from 2a0b:f4c2:3::82;
+set_real_ip_from 2a0b:f4c2:3::83;
+set_real_ip_from 2a0b:f4c2:3::84;
+set_real_ip_from 2a0b:f4c2:3::85;
+set_real_ip_from 2a0b:f4c2:3::86;
+set_real_ip_from 2a0b:f4c2:3::87;
+set_real_ip_from 2a0b:f4c2:3::88;
+set_real_ip_from 2a0b:f4c2:3::89;
+set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
 set_real_ip_from 2a0b:f4c2:4::101;
@@ -623,8 +650,6 @@ set_real_ip_from 2a0e:97c0:3ea:372::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
-set_real_ip_from 2a0e:d602:1:14bc::2;
-set_real_ip_from 2a0e:d602:2:2a2::2;
 set_real_ip_from 2a0e:d602:2:55f::2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
@@ -644,6 +669,12 @@ set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
+set_real_ip_from 2a0f:e586:f:f::133;
+set_real_ip_from 2a0f:e586:f:f::182;
+set_real_ip_from 2a0f:e586:f:f::188;
+set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
+set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
+set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:1fc0:10::debc:26b9;
 set_real_ip_from 2a10:1fc0:1::e016:2586;
 set_real_ip_from 2a10:1fc0:8::a061:729b;
