Update lists at 20240730-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -126,6 +126,7 @@ allow 139.99.172.11;
 allow 139.99.184.245;
 allow 139.99.8.57;
 allow 141.239.146.142;
+allow 141.95.59.71;
 allow 141.95.59.92;
 allow 141.95.59.93;
 allow 141.98.11.62;
@@ -219,6 +220,7 @@ allow 178.175.131.141;
 allow 178.175.142.26;
 allow 178.175.148.105;
 allow 178.175.148.107;
+allow 178.175.148.108;
 allow 178.175.148.209;
 allow 178.20.55.16;
 allow 178.20.55.182;
@@ -299,6 +301,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -617,6 +620,7 @@ allow 192.99.149.111;
 allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.142.147.233;
 allow 193.142.147.69;
 allow 193.168.141.173;
 allow 193.168.143.161;
@@ -1199,6 +1203,7 @@ allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:83::2c47;
 allow 2a00:1dc0:caff:8b::24bd;
+allow 2a00:1dc0:caff:b3::b759;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
@@ -1304,7 +1309,6 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
-allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
@@ -1510,7 +1514,6 @@ allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
-allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:bb20::1;
@@ -1562,7 +1565,6 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.237.195.87;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1584,6 +1586,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.219.142.92;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1696,6 +1699,7 @@ allow 5.255.121.179;
 allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.124.150;
+allow 5.255.124.164;
 allow 5.255.125.196;
 allow 5.255.125.41;
 allow 5.255.126.61;
@@ -1762,7 +1766,6 @@ allow 77.48.28.236;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
-allow 77.83.246.112;
 allow 77.90.41.191;
 allow 77.90.41.199;
 allow 77.90.42.201;
@@ -1770,7 +1773,6 @@ allow 77.90.42.213;
 allow 77.90.42.235;
 allow 77.90.42.236;
 allow 77.91.85.147;
-allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
