--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -126,6 +126,7 @@ deny 139.99.172.11;
 deny 139.99.184.245;
 deny 139.99.8.57;
 deny 141.239.146.142;
+deny 141.95.59.71;
 deny 141.95.59.92;
 deny 141.95.59.93;
 deny 141.98.11.62;
@@ -219,6 +220,7 @@ deny 178.175.131.141;
 deny 178.175.142.26;
 deny 178.175.148.105;
 deny 178.175.148.107;
+deny 178.175.148.108;
 deny 178.175.148.209;
 deny 178.20.55.16;
 deny 178.20.55.182;
@@ -299,6 +301,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -617,6 +620,7 @@ deny 192.99.149.111;
 deny 192.99.168.180;
 deny 193.105.134.150;
 deny 193.105.134.155;
+deny 193.142.147.233;
 deny 193.142.147.69;
 deny 193.168.141.173;
 deny 193.168.143.161;
@@ -1199,6 +1203,7 @@ deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:83::2c47;
 deny 2a00:1dc0:caff:8b::24bd;
+deny 2a00:1dc0:caff:b3::b759;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:cf2a::1;
@@ -1304,7 +1309,6 @@ deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
-deny 2a05:541:141:2c::1;
 deny 2a05:541:150:6::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:67c6::1;
@@ -1510,7 +1514,6 @@ deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
-deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:bb20::1;
@@ -1562,7 +1565,6 @@ deny 31.129.22.65;
 deny 31.13.195.60;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 34.237.195.87;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.1.201.144;
@@ -1584,6 +1586,7 @@ deny 37.46.211.24;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
+deny 44.219.142.92;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1696,6 +1699,7 @@ deny 5.255.121.179;
 deny 5.255.123.158;
 deny 5.255.123.164;
 deny 5.255.124.150;
+deny 5.255.124.164;
 deny 5.255.125.196;
 deny 5.255.125.41;
 deny 5.255.126.61;
@@ -1762,7 +1766,6 @@ deny 77.48.28.236;
 deny 77.48.28.237;
 deny 77.48.28.239;
 deny 77.81.247.72;
-deny 77.83.246.112;
 deny 77.90.41.191;
 deny 77.90.41.199;
 deny 77.90.42.201;
@@ -1770,7 +1773,6 @@ deny 77.90.42.213;
 deny 77.90.42.235;
 deny 77.90.42.236;
 deny 77.91.85.147;
-deny 77.91.87.79;
 deny 78.142.18.219;
 deny 79.124.8.241;
 deny 79.137.198.213;
