--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -339,6 +339,7 @@ set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:83::2c47;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
+set_real_ip_from 2a00:1dc0:caff:b3::b759;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
@@ -444,7 +445,6 @@ set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
-set_real_ip_from 2a05:541:141:2c::1;
 set_real_ip_from 2a05:541:150:6::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
@@ -650,7 +650,6 @@ set_real_ip_from 2a0e:97c0:3ea:372::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
-set_real_ip_from 2a0e:d602:2:55f::2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:bb20::1;
