--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -329,11 +329,7 @@ set_real_ip_from 2a00:19a0:3:d3:0:252e:d317:1;
 set_real_ip_from 2a00:19a0:3:d3:0:252e:d318:1;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
-set_real_ip_from 2a00:1dc0:caff:12f::c754;
-set_real_ip_from 2a00:1dc0:caff:132::5b6d;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
-set_real_ip_from 2a00:1dc0:caff:142::ad49;
-set_real_ip_from 2a00:1dc0:caff:143::9a47;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:83::2c47;
@@ -350,11 +346,12 @@ set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:25b0:aaaa:5258::;
 set_real_ip_from 2a02:2970:1001::4b;
-set_real_ip_from 2a02:29b8:dc01:1801::3;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143c;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:b33a;
 set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:b33b;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:b33c;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
