--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -114,7 +114,6 @@ allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
-allow 125.253.41.169;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
@@ -127,8 +126,6 @@ allow 139.99.172.11;
 allow 139.99.184.245;
 allow 139.99.8.57;
 allow 141.239.146.142;
-allow 141.95.59.71;
-allow 141.95.59.92;
 allow 141.95.59.93;
 allow 141.98.11.62;
 allow 141.98.119.106;
@@ -210,16 +207,12 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.114.202;
 allow 178.162.209.56;
-allow 178.17.170.125;
-allow 178.17.170.169;
 allow 178.17.170.23;
-allow 178.17.170.71;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.131.141;
 allow 178.175.142.26;
-allow 178.175.148.105;
 allow 178.175.148.107;
 allow 178.175.148.108;
 allow 178.175.148.209;
@@ -243,15 +236,10 @@ allow 179.43.159.78;
 allow 179.43.167.205;
 allow 179.43.179.58;
 allow 179.43.179.59;
+allow 179.43.179.60;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 181.41.143.234;
-allow 181.41.143.236;
-allow 181.41.143.246;
-allow 181.41.143.247;
-allow 181.41.143.250;
-allow 181.41.143.252;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -1194,11 +1182,7 @@ allow 2a00:19a0:3:d3:0:252e:d317:1;
 allow 2a00:19a0:3:d3:0:252e:d318:1;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
-allow 2a00:1dc0:caff:12f::c754;
-allow 2a00:1dc0:caff:132::5b6d;
 allow 2a00:1dc0:caff:138::94d2;
-allow 2a00:1dc0:caff:142::ad49;
-allow 2a00:1dc0:caff:143::9a47;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:83::2c47;
@@ -1215,11 +1199,12 @@ allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:25b0:aaaa:5258::;
 allow 2a02:2970:1001::4b;
-allow 2a02:29b8:dc01:1801::3;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143c;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:b33a;
 allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:b33b;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:b33c;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
@@ -1566,7 +1551,6 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.192.229.132;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1588,6 +1572,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.206.98.167;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1688,7 +1673,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1696,14 +1680,11 @@ allow 5.255.113.143;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.244;
-allow 5.255.121.179;
 allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.124.150;
-allow 5.255.124.164;
 allow 5.255.125.196;
 allow 5.255.125.41;
-allow 5.255.126.61;
 allow 5.255.127.222;
 allow 5.255.97.221;
 allow 5.255.98.151;
@@ -1737,12 +1718,10 @@ allow 64.226.89.91;
 allow 64.227.115.78;
 allow 64.227.159.148;
 allow 66.146.193.33;
-allow 66.206.27.13;
 allow 66.206.27.51;
 allow 66.206.27.54;
 allow 66.206.27.56;
 allow 66.206.27.58;
-allow 66.206.27.60;
 allow 66.220.242.222;
 allow 66.78.40.102;
 allow 66.78.40.182;
@@ -1791,11 +1770,9 @@ allow 81.17.20.60;
 allow 81.17.28.95;
 allow 82.118.242.36;
 allow 82.153.138.119;
-allow 82.153.138.208;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1897,6 +1874,7 @@ allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
+allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
