--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -329,11 +329,7 @@ deny 2a00:19a0:3:d3:0:252e:d317:1;
 deny 2a00:19a0:3:d3:0:252e:d318:1;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
-deny 2a00:1dc0:caff:12f::c754;
-deny 2a00:1dc0:caff:132::5b6d;
 deny 2a00:1dc0:caff:138::94d2;
-deny 2a00:1dc0:caff:142::ad49;
-deny 2a00:1dc0:caff:143::9a47;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:83::2c47;
@@ -350,11 +346,12 @@ deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:25b0:aaaa:5258::;
 deny 2a02:2970:1001::4b;
-deny 2a02:29b8:dc01:1801::3;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143c;
+deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:b33a;
 deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:b33b;
+deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:b33c;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:898:218::1;
